# cable_service_management

./: .gitignore  README.md  pyproject.toml  setup.py
cable_service_management/: hooks.py  modules.txt
cable_service_management/api/: customer_api.py  payment_hooks.py  payment_status_hook.py
cable_service_management/config/: desktop.py  docs.py
cable_service_management/doctype/channel/: channel.json
cable_service_management/doctype/customer/: customer.json  customer.py
cable_service_management/doctype/customer_package/: customer_package.json  customer_package.py
cable_service_management/doctype/package/: package.json  package.py
cable_service_management/doctype/payment/: payment.json  payment.py
cable_service_management/doctype/service_activation/: service_activation.json  service_activation.py
cable_service_management/fixtures/: custom_role.json  sample_packages.json
cable_service_management/workspace/: cable_service_management.json
cable_service_management/www/: index.html  login.html
